dark mode fixed

--- a/src/components/dark-mode/switch/dark-mode-switch.scss
+++ b/src/components/dark-mode/switch/dark-mode-switch.scss
@@ -54,10 +54,10 @@
   }
 
   input:checked + .slide:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    left: -20px;
+    -webkit-transform: translateX(6px);
+    -ms-transform: translateX(6px);
+    transform: translateX(6px);
+    left: 0px;
   }
 
   .slide.round {
