--- a/src/components/shared/alert/emergency-alert.scss
+++ b/src/components/shared/alert/emergency-alert.scss
@@ -2,6 +2,7 @@
   height: 60px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   background-color: #A43EC9;
   padding: 5px 10px;
   font-family: 'Helvetica', sans-serif;
